--- a/Function_Assignment.ipynb
+++ b/Function_Assignment.ipynb
@@ -439,7 +439,13 @@
    "cell_type": "code",
    "execution_count": 31,
    "id": "7b6149de-d2f4-46b5-ab78-c06cc4bd1612",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
